hphp/test/zend/bad/Zend/tests/magic_methods_010.php
<?php

class a {
	static protected function __toString($a, $b) {
	}
}

?>